--- a/.github/workflows/terraform-validate.yaml
+++ b/.github/workflows/terraform-validate.yaml
@@ -6,19 +6,20 @@ jobs:
   cli-validations:
     runs-on: ubuntu-latest
     name: Terraform cli validations
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.L2_INTERNAL_TESTING_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.L2_INTERNAL_TESTING_SECRET_ACCESS_KEY }}
+      AWS_DEFAULT_REGION: "us-east-2"
     steps:
       - uses: actions/checkout@v2
       - uses: hashicorp/setup-terraform@v1
       - name: Terraform format
-        run: terraform fmt --recursive
-      - name: Terraform Validate Module
-        run: |
-          terraform init -backend=false
-          terraform validate ./
+        run: terraform fmt -check --recursive
       - name: Terraform Validate Examples
         working-directory: examples/complete
         run: |
           terraform init -backend=false
+          terraform validate ./
       - name: Run Checkov action
         id: checkov
         uses: bridgecrewio/checkov-action@v12.567.0
