--- a/.github/workflows/terraform-validate.yaml
+++ b/.github/workflows/terraform-validate.yaml
@@ -30,8 +30,10 @@ jobs:
         id: checkov
         uses: bridgecrewio/checkov-action@v12.567.0
       
-      - uses: actions/setup-go@v1.1.3
+      - uses: actions/setup-go@v2.1.3
+        with:
+          go-version: '1.15.2'
       - name: Terratest
         working-directory: test
-        run: go test
+        run: go install && go test
 
