--- a/.github/workflows/terraform-validate.yaml
+++ b/.github/workflows/terraform-validate.yaml
@@ -15,8 +15,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1.3.2
+        uses: hashicorp/setup-terraform@v2.0.0
         with:
+          terraform_version: 1.1.9
           terraform_wrapper: false
 
       - name: Terraform format
@@ -30,12 +31,13 @@ jobs:
 
       - name: Run Checkov action
         id: checkov
-        uses: bridgecrewio/checkov-action@v12.567.0
-      
+        uses: bridgecrewio/checkov-action@v12.1347.0
+        with:
+          quiet: true
+
       - uses: actions/setup-go@v2.1.3
         with:
-          go-version: '1.15.2'
+          go-version: "1.15.2"
       - name: Terratest
         working-directory: test
         run: go test
-
