--- a/.github/workflows/terraform-validate.yaml
+++ b/.github/workflows/terraform-validate.yaml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     name: Terraform cli validations
     env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.L2_INTERNAL_TESTING_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.L2_INTERNAL_TESTING_SECRET_ACCESS_KEY }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_DEFAULT_REGION: "us-east-2"
     steps:
       - name: Checkout
@@ -27,7 +27,6 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2.0.0
         with:
-          terraform_version: 1.1.9
           terraform_wrapper: false
 
       - name: Terraform format
@@ -45,9 +44,10 @@ jobs:
         with:
           quiet: true
 
-      - uses: actions/setup-go@v2.1.3
+      - uses: actions/setup-go@v3
         with:
-          go-version: "1.15.2"
+          go-version: ">=1.17.0"
+
       - name: Terratest
         working-directory: test
         run: go test
